2018-04-10

        * Version 1.6.0 released
        ========================

        Keep existing library path in installation script on Mac OS X (#2420)
        Add GCTAEdisp::prob_erecobin() method (#2422)
        Add gammalib::gauss_integral() function (#2422)
        Add GSkyDir::cos_dist() method (#2309)
        Add GCTABackground::rate_ebin() method and gammalib::atan2() and
          gammalib::plaw_integral() functions (#2308)


2018-03-26

        * Bug fix version 1.5.1 released
        ================================

        Fix MANPATH for Mac OS X systems (#2420)
        Add kludge to handle noisy CTA 2D energy dispersion (#2342, #2403).
        Prevent unintentional deallocation of arguments (#2340).
        Correct sky map smoothing.


2018-01-23

        * Version 1.5.0 released
        ========================

        Change DATE_OBS, DATE_END, TIME_OBS and TIME_END FITS keywords into DATA-OBS,
          DATE-END, TIME-OBS and TIME-END
        Non-point source model throws exception in On/Off fitting (#2296)
        Set reference time to CTA reference time in GCTAEventcube, GCTAEventList and
          GCTACubeExposure (#2295)
        GCsv interprets lines in CSV files starting with # as comment lines (#2291)
        Add GPha::counts_spectrum() and GPha::backscal_spectrum() methods (#2290)
        Add GNdarray sign(), operator*= and operator/= (#2290)
        Add GSkyMap::counts() and GSkyMap::flux() methods and clip() friend operator
          (#2290)
        Add GSkyMap::array() method to Python interface (#2285)
        Add Off sky regions to GCTAObservation (#2284)
        By default require cfitsio library (#2265)
        CTA observations handle "statistic" attribute in XML file (#2238)
        Use CSTAT and CHI2 instead of POISSON and GAUSSIAN for statistic (#2237)
        Changed GObservation::statistics() to statistic() (#2238)
        Prevent negative response values for COMPTEL IRF (#2234)