@@ -1,8 +1,9 @@
-2018-04-10
+2018-04-16
 
         * Version 1.6.0 released
         ========================
 
+        Add GCTAModelRadialAcceptance model component setter methods
         Keep existing library path in installation script on Mac OS X (#2420)
         Add GCTAEdisp::prob_erecobin() method (#2422)
         Add gammalib::gauss_integral() function (#2422)
